Recommit a random comment to check if GitHub pages is alive

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <div id="hero">
+            <!-- TODO: Add a small MNIST demo to the right of hero content stuff-->
             <div id="hero-content">
                 <h1 id="name">Jinay Jain</h1>
                 <h3 id="tagline">Hogwarts-certified data wizard</h3>
