--- a/index.html
+++ b/index.html
@@ -34,15 +34,57 @@
             <img id="scroll-icon" src="img/down.svg" alt="keep scrolling!" />
         </div>
         <section id="projects-section">
-            <h1>Projects</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic
-                nisi libero recusandae nulla architecto vero ab mollitia iure,
-                veniam dolorum delectus autem minima, aperiam voluptatem error
-                totam, accusantium suscipit eum dolor aspernatur adipisci.
-                Doloribus adipisci nostrum iste qui quasi hic aliquid fuga vero
-                ad quam officia nulla dolores, exercitationem repudiandae?
-            </p>
+            <h1 id="projects-header">Projects</h1>
+
+            <ul>
+                <li class="light-box">
+                    <h3>Project 1</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Esse ad expedita officiis, perspiciatis nemo fuga quas
+                        fugiat laudantium cupiditate placeat! Sit, doloremque
+                        pariatur. Suscipit ipsum est nesciunt laboriosam in
+                        recusandae dolor, aliquid, voluptates ex rerum
+                        voluptatem aut impedit repellendus provident
+                        dignissimos. Minima exercitationem architecto laboriosam
+                        esse voluptatem sequi beatae consequatur!
+                    </p>
+                </li>
+                <li class="light-box">
+                    <h3>Project 2</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Obcaecati, facilis corporis. Unde vitae quis a
+                        blanditiis non officia, doloremque error.
+                    </p>
+                </li>
+                <li class="light-box">
+                    <h3>Project 3</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Dignissimos quia exercitationem harum, magni dicta
+                        porro id tenetur commodi soluta eum ut explicabo placeat
+                        mollitia hic dolor nisi quo vero? Voluptate facere
+                        delectus at. In perferendis adipisci dignissimos et quam
+                        voluptatibus enim ipsam, cum commodi, reiciendis,
+                        voluptatem necessitatibus odit debitis? Nulla neque
+                        aliquam veniam iure laboriosam necessitatibus maiores
+                        quis numquam. Ut.
+                    </p>
+                </li>
+                <li class="light-box">
+                    <h3>Project 4</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Possimus vero impedit itaque reprehenderit dolore
+                        repellendus, laborum voluptates. Ullam fugit recusandae
+                        possimus dolorum aliquid cum iste minus nulla assumenda
+                        eveniet itaque, beatae sit, saepe fuga dolorem? Dicta
+                        nam eveniet quo odit repellendus, necessitatibus quae
+                        quod. Aliquid totam illo unde iste magnam?
+                    </p>
+                </li>
+            </ul>
         </section>
     </body>
 </html>
