Add real projects and improve formatting

--- a/index.html
+++ b/index.html
@@ -117,31 +117,49 @@
                         </p>
                     </li>
                     <li class="light-box">
-                        <h3>Project 3</h3>
+                        <div class="project-title-bar">
+                            <a href="https://vimdocs.herokuapp.com">
+                                <h3>Vim Docs</h3>
+                            </a>
+                            <ul class="project-links">
+                                <li>
+                                    <a href="https://vimdocs.herokuapp.com"
+                                        ><i class="fa fa-window-maximize"></i
+                                    ></a>
+                                </li>
+                            </ul>
+                        </div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                            elit. Dignissimos quia exercitationem harum, magni
-                            dicta porro id tenetur commodi soluta eum ut
-                            explicabo placeat mollitia hic dolor nisi quo vero?
-                            Voluptate facere delectus at. In perferendis
-                            adipisci dignissimos et quam voluptatibus enim
-                            ipsam, cum commodi, reiciendis, voluptatem
-                            necessitatibus odit debitis? Nulla neque aliquam
-                            veniam iure laboriosam necessitatibus maiores quis
-                            numquam. Ut.
+                            Vim Docs is a realtime collaborative web editor that
+                            uses basic keybindings from the
+                            <a href="https://www.vim.org/">vim</a> text editor
+                            and collaboration like Google Docs. I built the site
+                            using a Vue frontend and an Express.js backend built
+                            with Node.js. I used Heroku to deploy the website
+                            and maintain it.
                         </p>
                     </li>
                     <li class="light-box">
-                        <h3>Project 4</h3>
+                        <div class="project-title-bar">
+                            <a href="https://github.com/JinayJain/TFCP">
+                                <h3>TFCP</h3>
+                            </a>
+                            <ul class="project-links">
+                                <li>
+                                    <a href="https://github.com/JinayJain/TFCP"
+                                        ><i class="fa fa-github"></i
+                                    ></a>
+                                </li>
+                            </ul>
+                        </div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                            elit. Possimus vero impedit itaque reprehenderit
-                            dolore repellendus, laborum voluptates. Ullam fugit
-                            recusandae possimus dolorum aliquid cum iste minus
-                            nulla assumenda eveniet itaque, beatae sit, saepe
-                            fuga dolorem? Dicta nam eveniet quo odit
-                            repellendus, necessitatibus quae quod. Aliquid totam
-                            illo unde iste magnam?
+                            TFCP is a code generation AI that harnesses the
+                            large code repositories of competitive programmers
+                            and trains a recurrent neural network on their code.
+                            Using Tensorflow and Keras, I created a Python
+                            script that would learn someone's coding style and
+                            generate similar pieces of "code" that mimics their
+                            way of programming.
                         </p>
                     </li>
                 </ul>
