Update links to match new domain

--- a/index.html
+++ b/index.html
@@ -90,17 +90,18 @@
                     </li>
                     <li class="light-box">
                         <div class="project-title-bar">
-                            <a href="http://jinayjain.github.io/mnist">
+                            <a href="/digit-recognizer">
                                 <h3>MNIST Recognizer</h3>
                             </a>
                             <ul class="project-links">
                                 <li>
-                                    <a href="http://jinayjain.github.io/mnist"
+                                    <a href="/digit-recognizer"
                                         ><i class="fa fa-window-maximize"></i
                                     ></a>
                                 </li>
                                 <li>
-                                    <a href="https://github.com/JinayJain/mnist"
+                                    <a
+                                        href="https://github.com/JinayJain/digit-recognizer"
                                         ><i
                                             class="project-link-item fa fa-github"
                                         ></i
