Add LinkedIn to homepage

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="https://www.linkedin.com/in/jinayjain/">
+                            <i class="fab fa-linkedin"></i> linkedin
+                        </a>
+                    </li>
+                    <li>
                         <a href="#projects-section">
                             <i class="fa fa-code"></i> projects
                         </a>
