--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#projects-section">
+                        <a href="#projects">
                             <i class="fa fa-code"></i> projects
                         </a>
                     </li>
@@ -41,7 +41,7 @@
                     </li>
                 </ul>
             </div>
-            <a href="#projects-section">
+            <a href="#projects">
                 <img
                     id="scroll-icon"
                     src="img/down.svg"
@@ -49,7 +49,7 @@
                 />
             </a>
         </div>
-        <section id="projects-section">
+        <section id="projects">
             <div id="projects-content">
                 <h1 id="projects-header">Projects</h1>
 
