Add support for extra small/low res devices

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </li>
                 </ul>
             </div>
-            <a href="#projects">
+            <a id="scroll-link" href="#projects">
                 <img
                     id="scroll-icon"
                     src="img/down.svg"
