Update favicon and fix typo

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             MNIST digit dataset in TensorFlow and saved the
                             model for web deployment. Using the Tensorflow.js
                             and React, I created a small web application that
-                            recognizer user-drawn digits on an HTML canvas.
+                            recognizes user-drawn digits on an HTML canvas.
                         </p>
                     </li>
                     <li class="light-box">
