--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     </li>
                 </ul>
             </div>
+            <div id="game-window">
+                TICTACTOE
+            </div>
             <a id="scroll-link" href="#projects">
                 <img
                     id="scroll-icon"
