--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Jinay Jain</title>
+
+    <script
+      async
+      defer
+      data-website-id="d37e2ac8-b49a-4c00-afb6-df62a2323d5b"
+      src="https://umami.lab.jinay.dev/umami.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
