--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       async
       defer
       data-website-id="d37e2ac8-b49a-4c00-afb6-df62a2323d5b"
-      src="https://umami.lab.jinay.dev/umami.js"
+      src="https://umami.lab.jinay.dev/u.js"
     ></script>
   </head>
   <body>
