Update script tag

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,7 @@
     -->
     <title>Jinay Jain</title>
 
-    <script
-      async
-      defer
-      data-website-id="2f387ed9-48f2-4f23-a5c4-028a7b1f558c"
-      src="https://umami.lab.jinay.dev/u.js"
-    ></script>
+    <script async src="https://umami.lab.jinay.dev/u.js" data-website-id="f45c4134-5415-40ce-9972-c273bc7104f5"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
