--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Jinay Jain</title>
 
-    <script async src="https://umami.lab.jinay.dev/u.js" data-website-id="f45c4134-5415-40ce-9972-c273bc7104f5"></script>
+    <script defer data-domain="jinay.dev" src="https://stat.lab.jinay.dev/js/script.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
